<?xml version="1.0" encoding="utf-8"?><!--  Single List Item Design -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <TextView
        android:id="@+id/proverb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="28dp"
        android:layout_marginEnd="28dp"
        android:background="@color/background"
        android:minHeight="80dp"
        android:gravity="fill_vertical"
        android:padding="4dp"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <ImageView
        android:id="@+id/share"
        android:layout_width="24dp"
        android:layout_height="28dp"
        android:layout_margin="8dp"
        android:background="@drawable/ic_share"
        android:scaleType="fitXY"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/proverb"
        android:contentDescription="@string/share"></ImageView>

    <Button
        android:id="@+id/delete"
        android:layout_width="32dp"
        android:layout_height="36dp"
        android:layout_margin="4dp"
        android:background="@drawable/round_shape_button"
        android:padding="10dp"
        android:text="@string/x"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/proverb"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/delete"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>